--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"autoprefixer": "^10.4.20",
-		"bits-ui": "^1.0.0-next.85",
+		"bits-ui": "^1.0.0-next.86",
 		"clsx": "^2.1.1",
 		"drizzle-kit": "^0.30.2",
 		"eslint": "^9.18.0",
@@ -52,6 +52,7 @@
 	},
 	"dependencies": {
 		"@neondatabase/serverless": "^0.10.4",
+		"@tanstack/table-core": "^8.20.5",
 		"drizzle-orm": "^0.38.4"
 	}
 }
