--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@types/file-saver": "^2.0.7",
+		"@types/json2csv": "^5.0.7",
 		"@types/papaparse": "^5.3.15",
 		"autoprefixer": "^10.4.20",
-		"bits-ui": "^1.0.0-next.86",
+		"bits-ui": "^1.0.0-next.92",
 		"clsx": "^2.1.1",
 		"drizzle-kit": "^0.30.2",
 		"eslint": "^9.18.0",
@@ -58,6 +59,10 @@
 		"drizzle-orm": "^0.38.4",
 		"file-save": "^0.2.0",
 		"file-saver": "^2.0.5",
-		"papaparse": "^5.5.2"
+		"json-2-csv": "^5.5.8",
+		"json2csv": "^6.0.0-alpha.2",
+		"papaparse": "^5.5.2",
+		"xlsx": "^0.18.5",
+		"xlsx-style": "^0.8.13"
 	}
 }
