--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 	},
 	"dependencies": {
 		"@neondatabase/serverless": "^0.10.4",
+		"@node-rs/argon2": "^2.0.2",
 		"@paralleldrive/cuid2": "^2.2.2",
 		"@tanstack/table-core": "^8.20.5",
 		"drizzle-orm": "^0.38.4",
